--- a/_posts/projects/2016-06-20-Trumpet.markdown
+++ b/_posts/projects/2016-06-20-Trumpet.markdown
@@ -1,6 +1,6 @@
 ---
 layout: project
-title:  "SmartMirror"
+title:  "Trumpet"
 date:   2016-06-20 12:00:00
 categories: projects
 githuburl: https://github.com/teamtrumpet
