--- a/_posts/projects/2016-06-20-Trumpet.markdown
+++ b/_posts/projects/2016-06-20-Trumpet.markdown
@@ -6,9 +6,7 @@ categories: projects
 githuburl: https://github.com/teamtrumpet
 ---
 
-[http://trumpet.ca](https://trumpet.ca)
-
-I participated as a front end developer for the project of building Trumpet.ca,
+I participated as a front end developer for the project of building [Trumpet.ca](https://trumpet.ca),
 which is a new review platform which encourages breivity and honesty through transparency.
 
 Features
